[package]
name = "xp-timekeeping"
version = "4.0.0"
edition = "2021"
description = "Universal Times v4.0 — Hydrogen-anchored dual-system temporal infrastructure for multi-planetary timekeeping"
license = "MIT"
repository = "https://github.com/00ranman/xp-timekeeping"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[lib]
name = "xp_timekeeping"
path = "src/lib.rs"
